--- a/src/collections-audio.html
+++ b/src/collections-audio.html
@@ -187,8 +187,9 @@
         <div class="col-md-3 categories">
           <ul class="main-items">
             <h5 class="cat-name cat-header">Categories</h5>
-            <li> <label class="container"><a href="#"> Autio</a><input type="checkbox"><span class="checkmark"></label>
-
+            <li> <label class="container">
+              <a href="#"> Autio</a><input type="checkbox">
+              <span class="checkmark"></label>
             </li>
 
             <li> <label class="container"><a href="#"> Watches</a> <input type="checkbox"><span class="checkmark"></label>
@@ -282,7 +283,7 @@
                   <p>Mi Power Bank 2nd 20000mAh</p>
                 </a>
                 <div><samp class="product-price">$370</samp></div>
-                </ </div> </div> <div class="row second-product">
+                 </div> </div> <div class="row second-product">
                 <div class="col-md-6">
                   <img class="product-image" src="//cdn.shopify.com/s/files/1/2235/6053/products/Mi_Power_Bank_2nd_10000mAh_100x.jpg?v=1501861757">
                 </div>
