--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
     crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Muli:400,700" rel="stylesheet">
+  <link rel="shortcut icon" href="//cdn.shopify.com/s/files/1/2235/6053/files/favicon_32x32.png?v=1505293692" type="image/png">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/home.css">
   <title>MOGO</title>
@@ -279,8 +280,10 @@
         </div>
       </div>
       <div class="carousel-item">
-        <iframe src="https://cdn.shopify.com/s/files/1/2235/6053/files/video.mp4?5319012367512207397" frameborder="0"
-          allowfullscreen=""></iframe>
+        <video width="100%" autoplay> 
+          <source src="//cdn.shopify.com/s/files/1/2235/6053/files/video.mp4?5319012367512207397">
+            
+        </video>
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -689,39 +692,7 @@
     <img class="topfixed" src="img/fixedtop.png" alt=".." />
   </div>
 
-  <!--
-               === Start Popup ===
-              -->
-  <div class="popup text-center">
-    <div class="box text-center">
-      <!--close item-->
-      <span class="close"><i class="fas fa-times"></i></span>
-      <!--write what you need -->
-      <div class="content">
-        <h2 class="h1 d-inline-flex">
-          <span class="parent">15</span><span class="middle"><sup>%</sup><sub>o</sub></span><span class="end">FF</span>
-        </h2>
-        <p>Your Next Purchase When You Sign Up.</p>
-        <p>By signing up, you accept the terms & Privacy Policy.</p>
-        <form class="" action="index.html" method="post">
-          <div class="d-flex">
-            <input type="text" name="" value="" placeholder="Enter your email">
-            <input type="submit" name="" value="Subscribe">
-          </div>
-        </form>
-        <div class="socaillinks">
-          <a href="#"><i class="fab fa-facebook-f"></i></a><a href="#"><i class="fab fa-google-plus-g"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="#"><i class="fab fa-youtube"></i></a><a href="#"><i class="fab fa-behance"></i></a>
-        </div>
-        <label class="container"> Don't show this popup again
-          <input type="checkbox" checked="checked">
-          <span class="checkmark"></span>
-        </label>
-      </div>
-    </div>
-  </div>
-  <!--End Popup-->
+
   <script src="js/jquery.min.js"></script>
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
